method calls now return cookies

--- a/src/CallSharp/CallSharp.csproj
+++ b/src/CallSharp/CallSharp.csproj
@@ -54,6 +54,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Empty.cs" />
+    <Compile Include="MethodCallCookie.cs" />
     <Compile Include="TypeDatabase.cs" />
     <Compile Include="TypeToStringConverter.cs" />
     <Page Include="MainWindow.xaml">
