window scaling: required for demos :)

--- a/src/CallSharp/CallSharp.csproj
+++ b/src/CallSharp/CallSharp.csproj
@@ -54,6 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ScaleToWindowSizeBehavior.cs" />
     <Compile Include="Empty.cs" />
     <Compile Include="FragmentationExtensions.cs" />
     <Compile Include="MethodCallCookie.cs" />
