--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Categories.cs" />
-    <Compile Include="StringTests.cs" />
+    <Compile Include="BasicMatchTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
