major speed improvement! 0.2 release

--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Categories.cs" />
     <Compile Include="BasicMatchTests.cs" />
     <Compile Include="FragTests.cs" />
+    <Compile Include="OtherTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
